overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web-service
  namespace: market-prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
spec:
  ingressClassName: nginx
  rules:
    - host: auction-api.collexx.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nestjs-app
                port:
                  number: 4000
